[package]
name = "basic-cookies"
repository = "https://github.com/drjokepu/basic-cookies"
documentation = "https://docs.rs/basic-cookies"
version = "0.1.5"
authors = ["Tamas Czinege <tomi.czinege@gmail.com>"]
description = "Low-level RFC 6265 combatible cookie handling library for Rust."
readme = "README.md"
keywords = ["cookie", "cookies", "rfc6265"]
categories = ["web-programming", "network-programming", "parser-implementations"]
license = "MIT"
edition = "2021"

[badges]
travis-ci = { repository = "drjokepu/basic-cookies", branch = "master" }

[dependencies]
"lalrpop-util" = "0.20.0"
"regex" = "1.3"

[build-dependencies]
"lalrpop" = "0.20.0"
